--- a/workspace.html
+++ b/workspace.html
@@ -31,37 +31,37 @@
                     <li class="menuList">
                         <a href="#">
                             <img src="smile[1].png">
-                            <p>menu</p>
+                            <p>집가고싶다</p>
                         </a>
                     </li>
                     <li class="menuList">
                         <a href="#">
                             <img src="smile[1].png">
-                            <p>menu</p>
+                            <p>집가고싶다</p>
                         </a>
                     </li>
                     <li class="menuList">
                         <a href="#">
                             <img src="smile[1].png">
-                            <p>menu</p>
+                            <p>집가고싶다</p>
                         </a>
                     </li>
                     <li class="menuList">
                         <a href="#">
                             <img src="smile[1].png">
-                            <p>menu</p>
+                            <p>집가고싶다</p>
                         </a>
                     </li>
                     <li class="menuList">
                         <a href="#">
                             <img src="smile[1].png">
-                            <p>menu</p>
+                            <p>집가고싶다</p>
                         </a>
                     </li>
                     <li class="menuList">
                         <a href="#">
                             <img src="smile[1].png">
-                            <p>menu</p>
+                            <p>안할랭</p>
                         </a>
                     </li>
                 </ul>
@@ -69,3 +69,64 @@
              </div>
     </body>
 </html>
+
+
+
+<html lang="en">
+<head>
+<title>CSS Website Layout</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* 
+{
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+  }
+  
+
+  
+  
+  @media screen and (max-width:600px) {
+    .column {
+      width: 100%;
+    }
+  }
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>안할랭</h1>
+  <p>집에가고싶은 이유 졸려서</p>
+</div>
+
+<div class="topnav">
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+</div>
+
+<div class="row">
+  <div class="column">
+    <h2>헤헤헤</h2>
+    <p>집가고싶다</p>
+  </div>
+  
+  <div class="column">
+    <h2>헤헤헤</h2>
+    <p>집가고싶다</p>
+  
+  <div class="column">
+    <h2>헤헤헤</h2>
+    <p>집가고싶다</p>
+  </div>
+</div>
+
+</body>
+</html>
+<div class="container">
+   
